<resources>
    <string name="app_name">Task Master</string>
    <!-- Drawer -->
    <string name="drawer_title_content">Drawer Title</string>
    <string name="drawer_sub_title_content">Drawer Sub Title</string>
    <string name="drawer_menu_list_content">Active Tasks</string>
    <!-- Active Tasks Fragment -->
    <string name="empty_active_tasks_message">You have no tasks, click + to add tasks.</string>
    <!-- Create Task Fragment -->
    <string name="tv_priority_title_content">Priority Level</string>
    <string name="create_task_rb_low_content">Low</string>
    <string name="create_task_rb_medium_content">Medium</string>
    <string name="create_task_rb_high_content">High</string>
    <!-- Task Details Fragment -->
    <string name="task_title_hint_content">Task Title</string>
    <string name="task_details_hint_content">Task Details</string>
    <!-- Task Details Menu -->
    <string name="details_menu_ac_complete_content">Set Complete</string>
    <string name="details_menu_ac_priority_content">Set Priority</string>
    <string name="details_menu_ac_reminder_content">Set Reminder</string>
    <!-- Completed Tasks Fragment-->
    <string name="empty_completed_tasks_message">Once you completed tasks they will appear here.</string>
    <!-- Completed Tasks Menu -->
    <string name="completed_tasks_menu_ac_delete_selected_content">Delete Selected</string>
    <!-- Statistics Fragment -->
    <string name="statistics_completed_tasks_title">Completed Tasks:</string>
    <string name="statistics_active_tasks_title">Active Tasks:</string>
    <string name="completed_tasks_menu_ac_set_active_content">Set Active</string>
    <!-- Chart Fragment -->
    <string name="iv_chart_description">An image of a chart.</string>
    <string name="tv_chart_empty_message_content">There may or may not be a chart here one day.</string>
    <!-- Preferences -->
    <string name="pref_dark_theme_key">DarkTheme</string>
    <string name="pref_low_task_bg_key">LowTaskBackgroundKey</string>
    <string name="pref_medium_task_bg_key">MediumTaskBackgroundKey</string>
    <string name="pref_high_task_bg_key">HighTaskBackgroundKey</string>
    <!-- Color Labels -->
    <string name="color_gray_label">Gray</string>
    <string name="color_green_label">Green</string>
    <string name="color_yellow_label">Yellow</string>
    <string name="color_orange_label">Orange</string>
    <string name="color_blue_label">Blue</string>
    <string name="color_pink_label">Pink</string>
    <!-- Color Values -->
    <string name="color_gray_value">#E7E7E7</string>
    <string name="color_green_value">#7AC5AF</string>
    <string name="color_yellow_value">#F3BA52</string>
    <string name="color_orange_value">#F1A874</string>
    <string name="color_blue_value">#77B7FC</string>
    <string name="color_pink_value">#FAA0C5</string>

</resources>
