<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context=".create.CreateTaskFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/match_constraint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_priority_level_title"
                android:layout_width="@dimen/match_constraint"
                android:layout_height="wrap_content"
                style="@style/base_title_text_style"
                android:gravity="center"
                android:text="@string/tv_priority_title_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/rg_priority_levels"
                tools:text="Priority Level"/>

            <RadioGroup
                android:id="@+id/rg_priority_levels"
                android:layout_width="@dimen/match_constraint"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_priority_level_title">

                <RadioButton
                    android:id="@+id/rb_low"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/base_radio_button_style"
                    android:checked="true"
                    android:text="@string/create_task_rb_low_content"
                    android:layout_marginStart="@dimen/margin_32"/>

                <RadioButton
                    android:id="@+id/rb_medium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/base_radio_button_style"
                    android:text="@string/create_task_rb_medium_content"/>

                <RadioButton
                    android:id="@+id/rb_high"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/base_radio_button_style"
                    android:text="@string/create_task_rb_high_content"
                    android:layout_marginEnd="@dimen/margin_32"/>

            </RadioGroup>

            <View
                android:id="@+id/line_separator"
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_separator_height"
                android:background="@android:color/black"
                android:layout_marginTop="@dimen/margin_4"
                app:layout_constraintTop_toBottomOf="@id/rg_priority_levels"/>

            <EditText
                android:id="@+id/et_task_title"
                android:layout_width="@dimen/match_constraint"
                android:layout_height="wrap_content"
                android:hint="@string/task_title_hint_content"
                style="@style/base_editable_title_text_style"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                app:layout_constraintTop_toBottomOf="@id/line_separator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <EditText
                android:id="@+id/et_task_details"
                android:layout_width="@dimen/match_constraint"
                android:layout_height="wrap_content"
                android:hint="@string/task_details_hint_content"
                style="@style/base_editable_body_text_style"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                app:layout_constraintTop_toBottomOf="@id/et_task_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_reminder"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>